# Test6

./: CHANGELOG.md  tsconfig.json
.github/workflows/: ci.yml  unzip.yml
1.github/ISSUE_TEMPLATE/: feature_request.md
docs/: ARCHITECTURE.md
ffmpeg-command-studio/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ffmpeg-command-studio/1.github/ISSUE_TEMPLATE/: bug_report.md
ffmpeg-command-studio/src/: App.tsx  index.css
ffmpeg-command-studio/src-tauri/icons/: icon.icns
ffmpeg-command-studio/src-tauri/src/: main.rs
ffmpeg-command-studio/src-tauri/src/commands/: settings.rs  system.rs
ffmpeg-command-studio/src-tauri/src/models/: file.rs  mod.rs
ffmpeg-command-studio/src-tauri/src/services/: ffmpeg_service.rs  history_service.rs
ffmpeg-command-studio/src-tauri/src/utils/: format_utils.rs  mod.rs
ffmpeg-command-studio/src/components/layout/: MainLayout.tsx  SidebarRight.tsx
ffmpeg-command-studio/src/store/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: clipboard.rs  ffmpeg.rs  file.rs  history.rs  mod.rs
src-tauri/src/models/: ffmpeg.rs  history.rs  settings.rs
src-tauri/src/services/: file_service.rs  mod.rs  settings_service.rs
src-tauri/src/utils/: path_utils.rs
src/components/layout/: Footer.tsx  Header.tsx  MainContent.tsx  SidebarLeft.tsx
src/components/tabs/: QueueTab.tsx
src/components/ui/: ToastContainer.tsx
src/hooks/: useSettings.ts  useTauri.ts
src/lib/: tauri.ts  utils.ts
src/types/: index.ts
(+2 files in other folders)
