[package]
name = "ffmpeg-command-studio"
version = "4.0.0"
description = "FFmpeg Command Studio - Professional Media Command Builder"
authors = ["FFmpeg Studio Team"]
license = "MIT"
repository = "https://github.com/user/ffmpeg-command-studio"
default-run = "ffmpeg-command-studio"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "dialog-open",
    "dialog-save",
    "clipboard-write-text",
    "clipboard-read-text",
    "shell-open",
    "system-tray",
    "window-close",
    "window-minimize",
    "window-show",
    "window-hide",
    "updater"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
